# aoa-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: android_auto.rs
src/: aoa2.rs  lib.rs
