[package]
name = "aoa"
version = "0.1.0"
authors = ["Zero <nick@zero.dev>"]
edition = "2018"
license = "MIT"
description = "Android Open Accessory Protocol"
readme = "README.md"
repository = "https://github.com/ZeroErrors/aoa-rs"
keywords = ["android", "usb"]

[dependencies]
rusb = "0.9"
byteorder = "1.3"
thiserror = "1.0"

[features]
aoa2 = []
